<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <FrameLayout
        android:id="@+id/camera_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.camera.view.PreviewView
            android:id="@+id/camera_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:scaleType="fitCenter" />

        <View
            android:id="@+id/zone_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/text_delay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:elevation="10dp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/text_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:elevation="10dp"
            android:textColor="@color/white"
            android:visibility="gone"
            tools:text="TextView" />

    </FrameLayout>

    <net.cachapa.expandablelayout.ExpandableLayout
        android:id="@+id/expand_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:el_duration="500"
        app:el_expanded="true"
        app:el_parallax="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#CC222222"
            android:clickable="true"
            android:focusable="true"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/button_coin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/coin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/card"
                app:layout_constraintStart_toEndOf="@+id/button_coin"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#444444"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/udp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayout"
                app:layout_constraintTop_toTopOf="@+id/textInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="#7f7f7f"
                app:layout_constraintEnd_toStartOf="@+id/button_start"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_server"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:importantForAutofill="no"
                    android:inputType="textUri"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/button_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/highlight_border_1dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/test"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_coin" />

            <TextView
                android:id="@+id/button_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/highlight_border_1dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/service"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@id/button_test"
                app:layout_constraintTop_toTopOf="@id/button_test" />

            <CheckBox
                android:id="@+id/check_debug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/show_debug_info"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/button_service"
                app:layout_constraintTop_toTopOf="@+id/button_service" />

            <CheckBox
                android:id="@+id/check_show_delay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/show_delay"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/check_debug"
                app:layout_constraintTop_toTopOf="@+id/check_debug" />

            <Button
                android:id="@+id/button_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/settings"
                app:layout_constraintBottom_toBottomOf="@+id/button_flip_camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button_flip_camera" />

            <Button
                android:id="@+id/button_recalibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="Recalibrate"
                app:layout_constraintBottom_toBottomOf="@+id/button_flip_camera"
                app:layout_constraintEnd_toStartOf="@+id/button_settings"
                app:layout_constraintTop_toTopOf="@+id/button_flip_camera" />

            <Button
                android:id="@+id/button_flip_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="Flip Camera"
                app:layout_constraintBottom_toBottomOf="@+id/check_show_delay"
                app:layout_constraintEnd_toStartOf="@+id/button_recalibrate"
                app:layout_constraintTop_toTopOf="@+id/check_show_delay" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </net.cachapa.expandablelayout.ExpandableLayout>

    <TextView
        android:id="@+id/text_expand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_gray_button"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        android:text="@string/collapse"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expand_control" />

</androidx.constraintlayout.widget.ConstraintLayout>